# appstore-ad-tools

./: .gitignore  ARTIFACT-APPENDIX.md  README.md  sample.env
account-creator/: README.md  accounts.csv  apple.py  create_db_entries.py  google_acc.py  main.py  requirements.txt  sim_factor.py
android-ad-extraction/: README.md  compile_hid_setup.sh  main.py  meson.build  settings.gradle.kts
android-ad-extraction/app/: build.gradle.kts
android-ad-extraction/experiment_configurations/: age_prop_experiment.csv  age_prop_experiment_extraction.csv  baseline.csv  baseline_extraction.csv  cross_account_pollution.csv  example_experiment.csv  finance_persona_experiment.csv  finance_persona_experiment_extraction.csv  finance_persona_experiment_re-extraction.csv  gender_prop_experiment.csv  gender_prop_experiment_extraction.csv  mental_health_persona.csv  mental_health_persona_extraction.csv  name_prop_experiment.csv  name_prop_experiment_extraction.csv  sensitive_gambling.csv  sensitive_gambling_extraction.csv  sensitive_gambling_repetition.csv  sensitive_gambling_repetition_extraction.csv  sensitive_parenting.csv  sensitive_parenting_extraction.csv  sensitive_parenting_repetition.csv  sensitive_parenting_repetition_extraction.csv  sensitive_sobriety.csv  sensitive_sobriety_extraction.csv  sensitive_weight_loss.csv  sensitive_weight_loss_extraction.csv  sensitive_weight_loss_repetition.csv  sensitive_weight_loss_repetition_extraction.csv  shopping_persona_experiment.csv  shopping_persona_experiment_extraction.csv
android-ad-extraction/hid-setup/: meson.build
android-ad-extraction/hid-setup/src/: hid_setup.c  options.c  screen.c
android-ad-extraction/hid-setup/src/adb/: adb_device.h
android-ad-extraction/hid-setup/src/usb/: aoa_hid.c  screen_otg.c
android-ad-extraction/hid-setup/src/util/: vecdeque.h  vector.h
harvester-api/: README.md  appbrain_fetcher.py  appstore_api.py  google_persona_checker.py  persona_builder.py  persona_transfer.py  requirements.txt  server.py
ios-ad-extraction/: README.md  ios_device.py  requirements.txt  test_device.mobileconfig
ios-ad-extraction/app_store_ad_extraction/: ContentView.swift  app_store_ad_extractionApp.swift
ios-ad-extraction/app_store_ad_extraction.xcodeproj/: project.pbxproj
ios-ad-extraction/app_store_ad_extractionUITests/: XCUIElement.swift  app_store_ad_extractionUITests.swift
ios-ad-extraction/cfgutil/: .gitignore  Makefile  README.md  patch
ios-ad-extraction/experiments/: age_extract.csv  age_signal.csv  alcohol_extract.csv  alcohol_signal.csv  baseline_extract.csv  baseline_signal.csv  casino_extract.csv  casino_signal.csv  cross-account_signal.csv  diet_extract.csv  diet_signal.csv  finance_extract.csv  finance_signal.csv  gender_extract.csv  gender_signal.csv  health_extract.csv  health_signal.csv  name_extract.csv  name_signal.csv  parenting_extract.csv  parenting_signal.csv  shopping_extract.csv  shopping_parameter_test_0.csv  shopping_parameter_test_14.csv  shopping_parameter_test_3.csv  shopping_parameter_test_7.csv  (+1 more)
stats-and-figures/: README.md  generate_plots.py  plot_helpers.py  requirements.txt  test_environment.py
(+25 files in other folders)
